# re-gog-trainer

./: .clangd  .gitignore  CMakeLists.txt  build_script.sh  windows32-toolchain.cmake
.cache/clangd/index/: dll.cpp.F2781133DDA53547.idx  launcher.cpp.91A93C9ED1F57DB9.idx  logger.cpp.0329F77BC027DA6A.idx  logger.h.8D13FCEC4E30CD4C.idx  memory_patcher.cpp.7663E65B24928F25.idx  memory_patcher.h.3A599DC945C7D377.idx
src/launcher/: launcher.cpp
src/trainer/: dll.cpp  memory_patcher.cpp  memory_patcher.h
src/util/: logger.cpp  logger.h
